# Entropy-aware-branching

./: Qwen-1b_gen_data.json  README.md  pyproject.toml  qwen2_gen_data.json  run.py  run_general.py  server.py
entropix/: PRM.py  config.py  dashboard.py  kvcache.py  llama.py  main.py  model.py  plot.py  sampler.py  stats.py  tokenizer.py
entropix/models/: __init__.py  download_weights.py  llama.py  qwen.py  smollm.py  xfmr.py
