[project]
name = "entropix"
version = "0.1.0"
description = "Entropy based sampling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "blobfile>=3.0.0",
    "jax[cuda12]>=0.4.35",
    "ml-dtypes>=0.5.0",
    "plotly>=5.24.1",
    "rich>=13.9.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.46.1",
    "tyro>=0.8.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["entropix*"]
